--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tai Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/53cd215f76.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -17,6 +18,12 @@
                 <li><a href="#">skills</a></li>
                 <li><a href="#">resume</a></li>
             </ul>
+            <div class="links">
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-tiktok"></i></a>
+            </div>
+            
         </nav>
     </div>
 </body>
