added my intro paragraph and change the color when you hover the mouse over the selections

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <ul class="navItems">
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
-                <li><a href="#">skills</a></li>
-                <li><a href="#">resume</a></li>
+                <li><a href="#">experiences</a></li>
+                <li><a href="#">education</a></li>
             </ul>
             <div class="links">
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -25,6 +25,18 @@
             </div>
             
         </nav>
-    </div>
+
+        <div class="wrapper">
+            <dive class="cols cols0">
+                <span class="topline">Hello</span>
+                <h1>I'm <span class="multiText">A Banker</span> </h1>
+                <p> For the past year, I have worked as a Chase Private Banker at Chase. Despite initially studying culinary arts, I transitioned to become a financial and investment advisor. Now, I am eager to expand my skillset by learning how to code. My ultimate goal is to create an investment app designed to teach younger children about investing.</p>
+                <div class="buttons">
+                    <button>Resume</button>
+                </div>
+
+        </div>
+
+    </div> 
 </body>
 </html>
