added a coursor and a resume. Also move the text around to fit the page.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <span class="topline">Hello</span>
                 <h1>I'm <span class="multiText">A Banker</span> </h1>
                 <p> For the past year, I have worked as a Chase Private Banker at Chase. Despite initially studying culinary arts, I transitioned to become a financial and investment advisor. Now, I am eager to expand my skillset by learning how to code. My ultimate goal is to create an investment app designed to teach younger children about investing.</p>
-                <div class="buttons">
+                <div class="btns">
                     <button>Resume</button>
                 </div>
 
