--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
                 <li><a href="#">experiences</a></li>
-                <li><a href="#">education</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
             <div class="links">
                 <a href="#"><i class="fab fa-instagram"></i></a>
@@ -30,12 +30,15 @@
             <dive class="cols cols0">
                 <span class="topline">Hello</span>
                 <h1>I'm <span class="multiText">A Banker</span> </h1>
-                <p> For the past year, I have worked as a Chase Private Banker at Chase. Despite initially studying culinary arts, I transitioned to become a financial and investment advisor. Now, I am eager to expand my skillset by learning how to code. My ultimate goal is to create an investment app designed to teach younger children about investing.</p>
+                <p> For the past year, I have worked as a Relationship Banker at Chase. Despite initially studying culinary arts, I transitioned to become a financial and investment advisor. Now, I am eager to expand my skillset by learning how to code. My ultimate goal is to create an investment app designed to teach younger children about investing.</p>
                 <div class="btns">
                     <button>Resume</button>
                 </div>
-
-        </div>
+                <div class="cols cols1"></div>
+            <div class="imgbox">
+                <img src="img.png" id="me">
+            </div>
+    </div> 
 
     </div> 
 </body>
